# arabic_dialects_qna

./: .gitignore  README.md  pyproject.toml  transcripts_preprocess.py
